--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-preprocess": "^4.6.1",
+    "svelte-swipe": "^1.7.1"
   }
 }
