--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "sirv-cli": "^1.0.0",
     "svelte-preprocess": "^4.6.1",
-    "svelte-swipe": "^1.7.1"
+    "svelte-swipe": "^1.7.1",
+    "tinro": "^0.3.7"
   }
 }
