--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "idb": "^5.0.7",
+    "indexeddb": "0.0.0",
     "sirv-cli": "^1.0.0",
     "svelte-material-icons": "^1.0.3",
     "svelte-preprocess": "^4.6.1",
